# bnil-emulator

./: .gitignore  CMakeLists.txt  README.md
api/: CMakeLists.txt  emulatorapi.h  ffi.h  ilemulator.cpp
api/python/: CMakeLists.txt  __init__.py  _emulatorcore_template.py  generator.cpp  ilemulator.py
core/: CMakeLists.txt  ffi_global.h  ilemulator.cpp  ilemulator.h  llilemulator.cpp  llilemulator.h  plugin.cpp  refcountobject.h
